Bug fixes: Scrolling area above FAB (isolate), Pending transaction modal fullScreen, Confirm discard button text wrapping.

--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -12,6 +12,7 @@
 }
 
 .scrollingBottom {
+	isolation: isolate;
 	padding-top: 12rem;
 	padding-left: 1rem;
 	padding-right: 1rem;
